// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba sobre el componente <GifExpertApp /> Debe de mostrar una lista de categorías 1`] = `
<div
  className="main__container"
>
  <div>
    <img
      alt="Random Img"
    />
  </div>
  <h2
    class="main__title"
  >
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="funny"
      key="funny"
    />
    <GifGrid
      category="cool"
      key="cool"
    />
  </ol>
</div>
`;

exports[`Prueba sobre el componente <GifExpertApp /> Debe renderizar correctamente el componente 1`] = `
<div
  className="main__container"
>
  <div>
    <img
      alt="Random Img"
    />
  </div>
  <h2
    class="main__title"
  >
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</div>
`;
